[tool.poetry]
name = "aiomcnet"
version = "0.1.0"
description = "An asynchronous Python library for interacting with Minecraft servers"
authors = ["WavyCat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
